--- a/src/main/resources/templates/report/choose-report-type.html
+++ b/src/main/resources/templates/report/choose-report-type.html
@@ -14,6 +14,8 @@
 	        <a href="user-report.html" th:href="@{/report/institution}" class="btn btn-primary btn-lg" role="button">Criar relatório de instituição</a>
 	        <hr>
             <a href="accessory-report.html" th:href="@{/report/orderCategory}" class="btn btn-primary btn-lg" role="button">Criar relatório de número de peças por tipo de acessório</a>
+            <hr>
+            <a href="accessory-report.html" th:href="@{/report/download/lateOrder}" class="btn btn-primary btn-lg" role="button">Criar relatório de pedidos atrasados.</a>
 	        <div th:include="layout :: footer" id="footer">(footer)</div>
 	    </div>
     </body>
